<resources>
    <string name="app_name">Friendtasy Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Waiting</string>
    <string name="log_out">登出</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">個人資料</string>
    <string name="menu_mybook">幻書</string>
    <string name="menu_badge">榮譽勳章</string>
    <string name="menu_friends">我的好友</string>
    <string name="menu_rule">幻書守則</string>
    <string name="menu_mail">飛鴿傳書</string>

    <string name="friend_Yu">郁蓁</string>>
    <string name="friend_Wating">薇婷</string>>
    <string name="friend_Maximus">建榮</string>>
    <string name="friend_Hsuan">芷玄</string>>

</resources>