<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profileicon"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/mybookicon"
            android:title="@string/menu_mybook" />
        <item
            android:id="@+id/nav_badge"
            android:icon="@drawable/badgeicon"
            android:title="@string/menu_badge" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friendicon"
            android:title="@string/menu_friends" />
    </group>
</menu>