<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.friendtasybooks.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_mybook"
            app:destination="@id/nav_mybook" />
        <action
            android:id="@+id/action_nav_home_to_nav_mybook_select"
            app:destination="@id/nav_mybook_select" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.friendtasybooks.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_profile_head"
            app:destination="@id/nav_profile_head" />
        <action
            android:id="@+id/action_nav_profile_to_nav_profile_name"
            app:destination="@id/nav_profile_name" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile_head"
        android:name="com.example.friendtasybooks.ui.profile.ProfileFragmentHead"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile_head" >
        <action
            android:id="@+id/action_nav_profile_head_to_nav_profile"
            app:popUpTo="@id/nav_profile"/>
    </fragment>
    <fragment
        android:id="@+id/nav_profile_name"
        android:name="com.example.friendtasybooks.ui.profile.ProfileFragmentName"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile_name" >
        <action
            android:id="@+id/action_nav_profile_name_to_nav_profile"
            app:popUpTo="@id/nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/nav_mybook"
        android:name="com.example.friendtasybooks.ui.home.MybookFragment"
        android:label="@string/menu_mybook"
        tools:layout="@layout/fragment_mybook" >
        <action
            android:id="@+id/action_nav_mybook_to_nav_mybook_classify"
            app:destination="@id/nav_mybook_classify" />
    </fragment>
    <fragment
        android:id="@+id/nav_mybook_classify"
        android:name="com.example.friendtasybooks.ui.home.MybookFragmentClassify"
        android:label="@string/menu_mybook"
        tools:layout="@layout/fragment_mybook_classify" >
        <action
            android:id="@+id/action_nav_mybook_classify_to_nav_mybook_get_ticket"
            app:destination="@id/nav_mybook_get_ticket" />
    </fragment>
    <fragment
        android:id="@+id/nav_mybook_get_ticket"
        android:name="com.example.friendtasybooks.ui.home.MybookFragmentGetTicket"
        android:label="@string/menu_mybook"
        tools:layout="@layout/fragment_mybook_get_ticket" >
        <action
            android:id="@+id/action_nav_mybook_get_ticket_to_nav_home"
            app:popUpTo="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_mybook_select"
        android:name="com.example.friendtasybooks.ui.home.MybookFragmentSelect"
        android:label="@string/menu_mybook"
        tools:layout="@layout/fragment_mybook_select" >
        <action
            android:id="@+id/action_nav_mybook_select_to_nav_mybook_cstore"
            app:destination="@id/nav_mybook_cstore" />
    </fragment>
    <fragment
        android:id="@+id/nav_mybook_cstore"
        android:name="com.example.friendtasybooks.ui.home.MybookFragmentCstore"
        android:label="@string/menu_mybook"
        tools:layout="@layout/fragment_mybook_cstore" >
        <action
            android:id="@+id/action_nav_mybook_cstore_to_nav_mybook_exchange"
            app:destination="@id/nav_mybook_exchange" />
    </fragment>
    <fragment
        android:id="@+id/nav_mybook_exchange"
        android:name="com.example.friendtasybooks.ui.home.MybookFragmentExchange"
        android:label="@string/menu_mybook"
        tools:layout="@layout/fragment_mybook_exchange" >
        <action
            android:id="@+id/action_nav_mybook_exchange_to_nav_home"
            app:popUpTo="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_badge"
        android:name="com.example.friendtasybooks.ui.badge.BadgeFragment"
        android:label="@string/menu_badge"
        tools:layout="@layout/fragment_badge" />
    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.friendtasybooks.ui.friends.FriendFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_nav_friends_to_nav_mailpaper_choose"
            app:destination="@id/nav_mailpaper_choose" />
    </fragment>
    <fragment
        android:id="@+id/nav_mailpaper_choose"
        android:name="com.example.friendtasybooks.ui.friends.FriendFragmentMailpaperChoose"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_mailpaper_choose" >
        <action
            android:id="@+id/action_nav_mailpaper_choose_to_nav_mailpaper_write"
            app:destination="@id/nav_mailpaper_write" />
    </fragment>
    <fragment
        android:id="@+id/nav_mailpaper_write"
        android:name="com.example.friendtasybooks.ui.friends.FriendFragmentMailpaperWrite"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_mailpaper_write" >
        <action
            android:id="@+id/action_nav_mailpaper_write_to_nav_friends"
            app:popUpTo="@id/nav_friends" />
    </fragment>
    <fragment
        android:id="@+id/nav_mail"
        android:name="com.example.friendtasybooks.ui.friends.FriendFragmentMail"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_mail" >
        <action
            android:id="@+id/action_nav_mail_to_nav_mailpaper_read"
            app:destination="@id/nav_mailpaper_read" />
        <action
            android:id="@+id/action_nav_mail_to_nav_friends"
            app:destination="@id/nav_friends" />
    </fragment>
    <fragment
        android:id="@+id/nav_mailpaper_read"
        android:name="com.example.friendtasybooks.ui.friends.FriendFragmentMailpaperRead"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_mailpaper_read" >
        <action
            android:id="@+id/action_nav_mailpaper_read_to_nav_mail"
            app:popUpTo="@id/nav_mail" />
    </fragment>
    <fragment
        android:id="@+id/nav_rule"
        android:name="com.example.friendtasybooks.ui.rule.RuleFragment"
        android:label="@string/menu_rule"
        tools:layout="@layout/fragment_rule" />
</navigation>